--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ log/*.log
 pkg/
 spec/dummy/db/*.sqlite3
 spec/dummy/log/*.log
+spec/dummy/spec
 spec/dummy/tmp/
 spec/dummy/.sass-cache
 agents_fixture.js
